--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id "org.sonarqube" version "3.5.0.2730"
+	id 'jacoco'
 }
 
 group = 'com.example.junit'
@@ -24,6 +25,10 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+tasks.named('sonarqube').configure {
+	dependsOn test
+}
+
 sonarqube {
 	properties {
 		property "sonar.projectKey", "ecchavez_Demo"
@@ -32,5 +37,6 @@ sonarqube {
 	}
 }
 
+test.finalizedBy jacocoTestReport
 
 
